language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_invalid.exp
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_invalid.move:5:9
  │
4 │         let r1 = &mut x;
  │                  ------ It is still being mutably borrowed by this reference
5 │         copy x;
  │         ^^^^^^ Invalid copy of local 'x'

