language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_invalid.move
module 0x8675309::Tester {
    fun t() {
        let x = 0;
        let r1 = &mut x;
        copy x;
        r1;
    }
}

// check: COPYLOC_EXISTS_BORROW_ERROR
